OCaml/mini-c/tests/typing/bad/testfile-redef-7.c

int f(int x, int y, int x) {
  return 0;
}
int main() {
  f(1, 2, 3);
}
